# M210VideoStreamReader_SDK40

./: CMakeLists.txt
VideoStreamReader/: CMakeLists.txt  main.cpp
