cmake_minimum_required(VERSION 2.8)
project(M210VideoStreamReader_SDK40)

set(CMAKE_VERBOSE_MAKEFILE ON)

set(DJIOSDK 0)
set(DJIOSDK_MINOR_VERSION 1)
set(DJIOSDK_PATCH_VERSION 0)
set(DJIOSDK_VERSION
        ${DJIOSDK_MAJOR_VERSION}.${DJIOSDK_MINOR_VERSION}.${DJIOSDK_PATCH_VERSION})
add_definitions(-DDJIOSDK_MAJOR_VERSION=4)
add_definitions(-DDJIOSDK_MINOR_VERSION=0)
add_definitions(-DDJIOSDK_PATCH_VERSION=0)

add_definitions(-DDJIOSDK_IS_DEBUG=2)

set(ARCH armv8)
add_definitions(-DDJIOSDK_HARDWARE_TYPE=2)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/libs)

set(ADVANCED_SENSING 1)
set(WAYPT2_CORE 1)

if (ADVANCED_SENSING)
    add_definitions(-DADVANCED_SENSING)
endif()

if (WAYPT2_CORE)
    add_definitions(-DWAYPT2_CORE)
endif()

add_subdirectory(osdk-core)
add_subdirectory(VideoStreamReader)